@@ -7,20 +7,20 @@ import mangoo.io.core.Application;
 import mangoo.io.enums.Key;
 import mangoo.io.enums.Mode;
 
-public enum MangooTest {
-    INSTANCE;
+public enum MangooTestInstance {
+    IO;
     private GreenMail fakeSMTP;
     private Injector injector;
 
-    MangooTest() {
+    MangooTestInstance() {
         System.setProperty(Key.APPLICATION_MODE.toString(), Mode.TEST.toString());
         Application.main(null);
         this.fakeSMTP = Application.getFakeSMTP();
         this.injector = Application.getInjector();
     }
 
-    public MangooTest getInstance() {
-        return INSTANCE;
+    public MangooTestInstance get() {
+        return IO;
     }
 
     public GreenMail getFakeSMTP() {
